--- a/smartcontactmanager/src/main/resources/application.properties
+++ b/smartcontactmanager/src/main/resources/application.properties
@@ -20,4 +20,5 @@ spring.application.name=smartcontactmanager
 
 #spring.profiles.active=prod
 
-spring.profiles.active=${ENV:dev}
+spring.profiles.active=${ENVIRONMENT:dev}
+
