--- a/smartcontactmanager/src/main/resources/application.properties
+++ b/smartcontactmanager/src/main/resources/application.properties
@@ -20,5 +20,8 @@ spring.application.name=smartcontactmanager
 
 #spring.profiles.active=prod
 
-spring.profiles.active=${ENVIRONMENT:prod}
+
+ # for production use here prod i changed for running here 
+spring.profiles.active=${ENVIRONMENT:prod} 
+
 
